tests/type_errors/inline_lambda_eq.nos
# expect_error: does not implement Eq
# Inline lambda expressions should not bypass Eq trait checking
main() = (x => x) == (y => y)
